--- a/conda.yml
+++ b/conda.yml
@@ -257,6 +257,7 @@ dependencies:
     - cycler==0.11.0
     - datasets==2.4.0
     - dill==0.3.5.1
+    - emoji==0.6.0
     - filelock==3.8.0
     - fonttools==4.37.1
     - frozenlist==1.3.1
